change to alpine image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3.5'
 
 services:
-  elixir-build-env:
+  elixir:
     build: 
         context: .
         dockerfile: Dockerfile
     volumes:
-      - '.:/elixir-build-env'
-    entrypoint: ["bash","setup.sh"]
+      - '.:/elixir'
+    entrypoint: ["bash", 'setup.sh']
