--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,4 @@ services:
         context: .
         dockerfile: Dockerfile
     volumes:
-      - .:/ead/
-    entrypoint: ['bash', "setup.sh"] 
+      - .:/elixir-workspace
